[UI] Z-Index Fix

--- a/datahub/webapp/index.scss
+++ b/datahub/webapp/index.scss
@@ -13,8 +13,11 @@
 }
 
 #overlay-root {
-    div {
+    * {
         z-index: 10;
+    }
+    .arrow {
+        z-index: 11 !important;
     }
 }
 
